# NP.20212.Gr12

./: .gitignore  README.md
Assignment 1/Ex01/: HAZCHEM.h  Makefile
Assignment 1/Ex02/: CMakeLists.txt  SCOREBOARD.h  STUDENT.h
Assignment 1/Exercise 1/: main.cpp
Assignment01/: README.md
Assignment01/Ex01/: CMakeLists.txt  HAZCHEM.h  README.md
Assignment01/Ex01/Ex01/: main.cpp
Assignment01/Ex02/: CMakeLists.txt  IT4062_20212.txt  MI1144_20212.txt  README.md  SCOREBOARD.h  STUDENT.h
Assignment01/Ex022/: main.cpp
ChatClient/ChatClient/: ChatClient.csproj  Program.cs
ChatClient/ChatClient/Chat/: chatAll.Designer.cs  chatAll.cs  groupChat.Designer.cs  groupChat.cs  privateChat.Designer.cs  privateChat.cs
ChatClient/ChatClient/Login/: login.Designer.cs  login.cs
ChatClient/ChatClient/Menu/: menu.Designer.cs  menu.cs
ChatClient/ChatClient/Properties/: Resources.Designer.cs  Resources.resx  Settings.Designer.cs
SampleCode/02_SimpleTCP/: echoClient  echoServer
Server/Server/: Server.vcxproj  account.txt  main.cpp
cpp_crow/: CMakeLists.txt
cpp_crow/src/: Dockerfile  main.cpp
cppweb/: MY_FILE.txt
cppweb/crow_demo_01/: CMakeLists.txt  Dockerfile  main.cpp
cppweb/crow_demo_01/bbox/: Dockerfile
